<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Small Cloud Emoticon</string>
    <string name="action_close">Close</string>
    <string name="list_title_favorite">Favorites</string>
    <string name="list_title_options">Options</string>
    <string name="toast_copied">Emoticon copied</string>
    <string name="download_title">Downloading</string>
    <string name="download_message">Please wait a moment.</string>
    <string name="download_success">Success sync</string>
    <string name="download_fail">Sync failed. %s</string>
    <string name="download_malformed_url">Source address is malformed.</string>
    <string name="download_io_exception">Cannot connect to server.</string>
    <string name="download_no_found">File no found (404).</string>
    <string name="download_http_error">HTTP error.</string>
    <string name="download_file_parser_error">Some wrong in file.</string>
    <string name="download_unknown_error">Something go wrong during downloading.</string>
    <string name="pref_behaviors_title">Behaviors</string>
    <string name="pref_after_copied_title">After copied</string>
    <string name="pref_after_copied_dialog_title">Select one action</string>
    <string name="pref_ui_title">UI</string>
    <string name="pref_show_note_title">Show note below emoticon</string>
    <string name="pref_favorites_title">Favorites</string>
    <string name="pref_history_clean_title">Clean usage history</string>
    <string name="pref_history_clean_done">Usage history has gone.</string>
    <string name="pref_star_clean_title">Unset all stars</string>
    <string name="pref_star_clean_summary">Long click on a emoticon to tag a star</string>
    <string name="pref_star_clean_done">All stars have gone.</string>
    <string name="pref_star_clean_confirm_title">Are you sure?</string>
    <string name="pref_star_clean_confirm_msg">This action will clean all stars permanently.</string>
    <string name="pref_source_title">Source</string>
    <string name="pref_sync_title">Refresh</string>
    <string name="pref_sync_summary">Download emoji list from source below</string>
    <string name="pref_source_address_title">Source address</string>
    <string name="pref_source_address_default" translatable="false">https://lab.sorz.org/static/dl/test.xml</string>
    <string name="pref_about_title">About</string>
    <string name="pref_github_title">Source code</string>
    <string name="pref_github_summary">Open GitHub to view the source code</string>
    <string name="pref_github_url" translatable="false">https://github.com/sorz/SmallCloudEmoji/</string>
    <string name="pref_version_unknown">Version (unknown)</string>
    <string name="pref_version_title">Version %1$s (%2$d)</string>
    <string name="title_activity_view_new_source">Add Source</string>
    <string name="pref_source_manage_title">Manage sources</string>
    <string name="menu_repository_add">Add repository</string>
    <string name="hint_repository_url">Repository URL</string>
    <string name="hint_repository_alias">Alias</string>
    <string name="input_cannot_be_empty">Must input something here</string>
    <string name="input_repository_exist">Already added</string>
    <string name="menu_repository_delete">Delete</string>
    <string name="confirm_delete_repository_title">Delete confirmation</string>
    <string name="confirm_delete_repository_part1">Are you sure delete %s?</string>
    <string name="confirm_delete_repository_part2">\n%s favorites will be dropped.</string>
    <string name="menu_repository_sync">Sync</string>
    <string name="menu_repository_rename">Rename</string>
    <string name="repository_rename_title">New alias</string>
    <string name="toast_repository_copied">Repository URL copied.</string>
    <string name="download_unsupported">Unsupported file format.</string>
    <string name="see_right_side">See right side</string>
    <string name="store_url" translatable="false">http://emoticon.moe/store.xml</string>
    <string name="go_emoticon_store_title">Go to Emoticon Store</string>
    <string name="go_emoticon_store_description">Variety of emoticons created by community</string>
    <string name="go_emoticon_store_no_warranty">Supported by +Yashi without any warranty</string>
    <string name="go_emoticon_store_incomplete_translation">May contains Chinese characters</string>
    <string name="source_icon_description">Avatar of creator</string>
    <string name="store_server_fail">Store is temporary closed</string>
    <string name="please_pull_down">Pull Down to Refresh</string>
    <string name="source_installed">Installed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_default_introduction">_(:з」∠)_</string>
    <string name="source_default_creator">unknown</string>
    <string name="source_default_server">Internet</string>
    <string name="source_install">Install</string>
    <string name="source_maintainer">Maintainer</string>
    <string name="source_server">Server</string>
    <string name="menu_open_browser">Open in browser</string>
    <string name="pref_show_source_name">Show source name</string>

</resources>
